update backend to v2